--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 python = "^3.11"
 pytest = "^7.4.3"
 
-
 [tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
 pytest-cov = "^4.1.0"
 
 [build-system]
